[package]
name = "showbywasm"
version = "0.1.0"
edition = "2021"
authors = ["hanrui0908 <hanrui0908@live.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/hanrui0908/rust_demo"
[lib]
crate-type = ["cdylib"]
[dependencies]
wasm-bindgen = "0.2"

